# werag

./: README.md  docker-compose.example.yml  pyproject.toml
flask_example/: .gitignore  requirements.txt
flask_example/app/: .gitignore  __init__.py  db.py  rag.py  schema.sql
flask_example/app/templates/content/: edit.html
flask_example/app/view/: chat.py  content.py
src/: pyproject.toml
src/tests/: .gitignore  test_client.py  test_crud.py  utils.py
src/tests/assets/: lorem.txt  personal_info.txt
src/werag/: __init__.py  client.py  crud.py  db.py  schema.py  utils.py
src/werag/schemas/: chunk.py
